[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakewindowsize"
version = "0.6"
description = "Python module to generate realistic browsers window size."
readme = "README.md"

license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Carlos A. Planchón"}
]
keywords = ["fake", "window", "size"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/fakewindowsize/fakewindowsize"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.24.0",
]

[tool.setuptools]
packages = ["fakewindowsize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=fakewindowsize",
    "--cov-report=term-missing",
    "--cov-report=html",
]
